# project-repository-ksuh5

./: .gitignore  frontplan.md  frontprompt.md  package-lock.json  plan.md  prompt.md  pyproject.toml  spec.md  stackplan.md
.github/workflows/: ci.yml
app/: db.py  main.py
backend/: pyproject.toml
backend/.local/: state.db
backend/app/: csv_io.py  main.py  models.py  osrm_client.py  planning.py  state_store.py
backend/running_planner_backend.egg-info/: PKG-INFO  SOURCES.txt
backend/tests/: test_csv_export.py  test_csv_export_endpoint.py  test_csv_import.py  test_csv_import_endpoint.py  test_health.py  test_models_planned_workout.py  test_models_workout_type.py  test_plan_recalculate_endpoint.py  test_planning_recalculate_rules.py  test_routes_snap_validation.py  test_state_endpoints.py  test_state_store.py
frontend/: .env.example  README.md  frontspec.md  index.html  package-lock.json  package.json  vitest.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/api/: config.js  config.test.js  csvApi.js  csvApi.test.js  healthApi.js  healthApi.test.js  http.js  http.test.js  mappers.js  mappers.test.js  recalcApi.js  recalcApi.test.js  routesApi.js  routesApi.test.js  stateApi.js  stateApi.test.js
frontend/src/components/: AddWorkoutModal.css  AddWorkoutModal.jsx  CalendarToggle.css  DayCell.css  (+30 more)
frontend1/: README.md
frontend1/src/: test-setup.js
frontendv2/: .env.example  .gitignore  package-lock.json  package.json  vitest.config.js
frontendv2/src/: App.css  App.jsx
project/: plan.md  prompt.md
tests/: test_health.py
(+62 files in other folders)
